cmake_minimum_required(VERSION 3.16)

project(learn_c++)

set(CMAKE_MODULE_PATH "${CMAKE_BINARY_DIR}${CMAKE_MODULE_PATH}")

set(PROJECT_NAME "learn_c++")

set (CMAKE_CXX_STANDARD 14)

include(FetchContent)
FetchContent_Declare(
        googletest
        URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)

FetchContent_MakeAvailable(googletest)

enable_testing()

add_executable(
        test_distance
        tests/chapter_11/test_distance_class.cc
)
add_executable(${PROJECT_NAME} src/chapter_5/convert_time_to_second.cpp)
add_executable(time_to_second_converter src/chapter_5/convert_time_to_second.cpp)
add_executable(celiac_converter src/chapter_5/celsia_converter.cpp src/chapter_5/celsia_converter.cpp)
add_executable(second_to_time_converter src/chapter_5/second_to_time_converter.cpp)
add_executable(small_job src/chapter_6/small_job.cpp)
add_executable(distance_class src/chapter_6/distance.cpp)
add_executable(toll_booth src/chapter_6/toll_booth.cpp)
add_executable(time_adding src/chapter_6/time.cpp)
add_executable(employee src/chapter_6/employ.cpp)
add_executable(date src/chapter_6/Date.cpp)
add_executable(super_employee src/chapter_6/super_employee.cpp)
add_executable(angle src/chapter_6/angle.cpp)
add_executable(object_counter src/chapter_6/object_counter.cpp)
add_executable(fraction src/chapter_6/Fraction.cpp)
add_executable(ship src/chapter_6/ship.cpp)
add_executable(stack src/chapter_7/stack.cpp)
add_executable(deck src/chapter_7/card_game.cpp)
add_executable(print_string src/chapter_7/string_file.cpp)
add_executable(copy_string src/chapter_7/copy_string.cpp)
add_executable(about_info src/chapter_7/string_class.cpp)
add_executable(revers src/chapter_7/reversit.cpp)
add_executable(employee_with_name src/chapter_7/employee_with_name.cpp)
add_executable(array_max src/chapter_7/max_number.cpp)
add_executable(money src/chapter_7/money.cpp)
add_executable(safe_array src/chapter_7/safeArray.cpp)
add_executable(transfer_object src/chapter_7/test_transfer_object.cpp)
add_executable(queue src/chapter_7/queue.cpp)
add_executable(matrix src/chapter_7/matrix.cpp)
add_executable(reload_counter src/chapter_8/reload_counter.cpp)
add_executable(overloaded_distance src/chapter_8/distance.cpp)
add_executable(calculator src/chapter_8/claculator.cpp)
add_executable(my_costume_string src/chapter_8/string.cpp)
add_executable(operator_time src/chapter_8/operator_time.cpp)
add_executable(costume_integer src/chapter_8/costume_integer.cpp)
add_executable(inherit_count src/chapter_9/inherit_counter.cpp)
add_executable(inherit_stack src/chapter_9/inherit_stack.cpp)
add_executable(book src/chapter_9/publication.cpp)
add_executable(protected_string src/chapter_9/protected_string.cpp)
add_executable(list_of_address src/chapter_10/list_of_addresses.cpp)
add_executable(change_value_by_pointer src/chapter_10/change_value_by_pointer.cpp)
add_executable(void_pointer src/chapter_10/void_pointer.cpp)
add_executable(pointer_array src/chapter_10/pointer_array.cpp)
add_executable(sentimize src/chapter_10/centimize.cpp)
add_executable(pass_pointer_array src/chapter_10/pass_array.cpp)
add_executable(sorting src/chapter_10/sort.cpp)
add_executable(display_string src/chapter_10/display_str.cpp)
add_executable(pointer_copy_string src/chapter_10/pointer_copy_string.cpp)
add_executable(pointer_string_array src/chapter_10/pointer_string_array.cpp)
add_executable(dymamic_string src/chapter_10/dynamic_string.cpp)
add_executable(pointer_string src/chapter_10/pointer_string.cpp)
add_executable(pointer_distance src/chapter_10/pointer_distance.cpp)
add_executable(pointer_person src/chapter_10/pointer_person.cpp)
add_executable(linked_list src/chapter_10/linked_list.cpp)
add_executable(person_sorting src/chapter_10/person_sorting.cpp)
add_executable(question_10 src/chapter_10/question.cpp)
add_executable(middle_float src/chapter_10/middle_float.cpp)
add_executable(sort_day_of_week src/chapter_10/sort_day_of_weeks.cpp)
add_executable(transfer_array src/chapter_10/transfer_array.cpp)
add_executable(compare_string src/chapter_10/compare_string.cpp)
add_executable(slice_array src/chapter_10/slice_array.cpp)
add_executable(chapter_10_array src/chapter_10/custom_array.cpp)
add_executable(test_virtual_functions src/chapter_11/test_virtual_functions.cpp)
add_executable(virtual_person src/chapter_11/virtual_person.cpp)
add_executable(friend_function src/chapter_11/friend_class.cpp)
add_executable(no_friend_distance src/chapter_11/no_friend_distance.cpp)
add_executable(static_function src/chapter_11/static_function.cpp)
add_executable(maga_string src/chapter_11/mega_string.cpp)
add_executable(virtual_publication src/chapter_11/virtual_pulbication.cpp)
add_executable(my_array src/chapter_11/class_array.cpp)
add_executable(big_money src/chapter_11/virtual_money.cpp)

target_link_libraries(
        test_distance
        GTest::gtest_main
)

target_link_libraries(no_friend_distance GTest::gtest_main)
target_link_libraries(my_array GTest::gtest_main)
target_link_libraries(big_money GTest::gtest_main)

include(GoogleTest)
gtest_discover_tests(test_distance)
gtest_discover_tests(no_friend_distance)

find_package(fmt REQUIRED)
if (fmt_FOUND)
    target_include_directories(${PROJECT_NAME} PRIVATE ${fmt_INCLUDE_DIRS})
    target_link_libraries(${PROJECT_NAME} PRIVATE ${fmt_LIBRARIES})
endif()			

find_package(CURL REQUIRED)
if (CURL_FOUND)
    target_include_directories(${PROJECT_NAME} PRIVATE ${CURL_INCLUDE_DIRS})
    target_link_libraries(${PROJECT_NAME} PRIVATE ${CURL_LIBRARIES})
endif()

find_package(GTest REQUIRED)
if (GTest_FOUND)
    target_include_directories(${PROJECT_NAME} PRIVATE ${GTest_INCLUDE_DIRS})
    target_link_libraries(${PROJECT_NAME} PRIVATE ${GTest_LIBRARIES})
endif()
